# Servicelink-platform

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CODEX_REPORT.md  DBMS_RELATIONS_GUIDE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
REPORTS/: ENGINEERING_AUDIT.md
servicelink_backend/: .dockerignore  .env.example  Dockerfile  README.md  create_demo.py  manage.py  pyproject.toml  requirements.txt  seed_data.py  seed_tools.py  setup_mysql.py
servicelink_backend/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
servicelink_backend/apps/accounts/migrations/: 0001_initial.py
servicelink_backend/apps/bookings/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
servicelink_backend/apps/bookings/migrations/: 0001_initial.py  0002_review.py  0003_alter_booking_status_idempotencykey.py  0003_idempotencykey.py  0004_alter_booking_status.py  0004_booking_hours_per_day_and_more.py  0005_add_booking_type_field.py  0006_remove_booking_booking_type_bookingchangerequest.py  0007_alter_booking_booking_type.py
servicelink_backend/apps/tools/: admin.py  models.py  serializers.py  urls.py  views.py
servicelink_backend/apps/tools/migrations/: 0001_initial.py  0002_tool_image_url.py
servicelink_backend/apps/workers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
servicelink_backend/servicelink/: asgi.py  urls.py  wsgi.py
servicelink_backend/servicelink/settings/: __init__.py  base.py  development.py  production.py
(+109 files in other folders)
