[project]
name = "servicelink-backend"
version = "0.1.0"
description = "ServiceLink Django backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django==5.2.7",
  "djangorestframework==3.16.1",
  "djangorestframework-simplejwt==5.5.1",
  "django-cors-headers==4.9.0",
  "PyMySQL==1.1.1",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
